# s3handler

./: .gitignore  .markdown-lint.yml  .travis.yml  Cargo.toml  README.md  flake.nix
.github/workflows/: linter.yml  test.yml
examples/: download-with-prefix.rs
src/: aws.rs  error.rs  lib.rs  upload_pool.rs
src/async-std/: mod.rs
src/blocking/: aws.rs  download_pool.rs  mod.rs  upload_pool.rs
src/tokio/: primitives.rs  traits.rs
src/tokio/primitives/: canal.rs  file.rs  s3.rs
src/tokio_async/: traits.rs
src/tokio_async/primitives/: canal.rs  file.rs  mod.rs  s3.rs
src/utils/: mod.rs
tests/: v2.rs  v4.rs
