[package]
name = "s3handler"
version = "0.6.2"
authors = ["Antonio Yang <antonio.yang@siliconmotion.com.tw>"]
edition = "2018"
description = "An s3 handler for s3rs s3fs"
license = "MIT"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.10" }  # TODO: use json feature and refact
hyper = "0.11"
http = "0.2"
chrono = "0.4"
rust-crypto = "0.2"
hmac = "0.4"
sha2 = "0.6"
base64 = "0.6"
rustc-serialize = "0.3"
hmac-sha1 = "0.1"
url = "2.1"
log = "0.4"
md5 = "0.3"
serde_json = "1.0"
regex = "0.2"
quick-xml = "0.12"
colored = "1.6"
failure = "0.1"
failure_derive ="0.1"
mime_guess = "2.0"
async-trait = { version = "0.1", optional = true }
tokio = { version = "0.2", optional = true }
bytes = { version= "0.5", optional = true }
dyn-clone = "1.0"
futures = "0.3.12"

[features]
default = [ "blocking", "tokio-async" ]
blocking = [
    "reqwest/blocking"
]
"tokio-async" = [
    "async-trait",
    "tokio/fs", "tokio/macros", "tokio/rt-threaded",
    "bytes",
]
# "std-async" = []

# remove api with duplicate function
slim = []
