[package]
name = "s3handler"
version = "0.8.0"
authors = ["Antonio Yang <antonio.yang@siliconmotion.com.tw>"]
edition = "2018"
keywords = ["S3", "Amazon", "CEPH", "AWS"]
categories = ["command-line-interface"]
description = "An s3 handler for s3rs nu-shell-s3-plugin"
license = "MIT"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.11" }  # TODO: use json feature and refact
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.13"
hmac-sha1 = "0.1"
url = "2.1"
log = "0.4"
md5 = "0.7"
serde_json = "1.0"
regex = "1"
quick-xml = "0.23"
thiserror = "1.0"
mime_guess = "2.0"
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", optional = true }
bytes = { version= "1", optional = true }
dyn-clone = "1.0"
futures = "0.3"
hex = "0.4"

[dev-dependencies]
test-with = "0.7.5"

[features]
default = [ "blocking", "tokio-async" ]
blocking = [
    "reqwest/blocking"
]
"tokio-async" = [
    "async-trait",
    "tokio/fs", "tokio/macros", "tokio/rt-multi-thread",
    "bytes",
]
# "std-async" = []

# remove api with duplicate function
slim = []
